# quick-examples

./: .gitignore  README.md
carsharing/: README.md
carsharing/frontend/: index.html  query.html
carsharing/quick/: schema.graphql
carsharing/simulator/: Dockerfile  README.md  deployment.yaml  docker-compose.yaml  requirements.txt  secret.yaml
carsharing/trip-aggregator-app/: deployment.yaml  values.yaml
profile-store/: Readme.md
profile-store/data/: Readme.md
profile-store/data/sampler/: Readme.md  (+1 more)
profile-store/deployment/: .env  Readme.md  declarations.gql  justfile  schema.gql
profile-store/frontend/: Dockerfile  Readme.md  pyproject.toml
profile-store/frontend/app/: client.py  generate_users.py  listen_data.py  main.py  users.py  utils.py
profile-store/frontend/app/assets/: app.css
profile-store/streams-apps/: Readme.md  build.gradle.kts  gradle.properties  settings.gradle.kts
tiny-url/: README.md  commands.sh  schema.gql  tiny-urls.json
tiny-url/counter/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
tiny-url/frontend/: app.js  index.html  main.css
tutorials/: ReadMe.md
tutorials/crud/: commands.sh  schema.gql
tutorials/multi-stream/: commands.sh  purchase-schema.gql  schema.gql
tutorials/schema/: commands.sh  product-schema.gql  schema-query-all.gql  schema-query-single.gql
tutorials/subscriptions/: commands.sh  generator_products.py  generator_purchases.py  generator_users.py  ids.json  product-schema.gql  products.json  purchase-schema.gql  schema.gql  story.md  user-schema.gql  user_ids.json  users.json
(+109 files in other folders)
