[tool.poetry]
name = "profile-store-app"
version = "1.0.0"
description = "Demo app for the profile-store"
authors = ["Markus Kobold <markus.kobold@bakdata.com>"]

[tool.poetry.dependencies]
python = "^3.8"
dash = "^2.0"
dash-core-components = "^2.0"
dash-html-components = "^2.0"
dash-bootstrap-components = "^0.13"
dash-extensions = "^0.0.60"
flask-sockets = "^0.2.1"
pandas = "^1.3"
Faker = "^4.0"
py-avataaars = "1.1.2"
requests = "^2.26.0"
gql = "^2.0"
gunicorn = "20.1.0"

[tool.poetry.dev-dependencies]
black = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
